# ai-hil-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  devices.toml  setup.sh
build-flash-mcp/: server.py
build-flash-mcp-rs/: Cargo.toml
build-flash-mcp-rs/src/: main.rs
doc/: 2026-03-19.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-25.md  2026-03-29.md  user-manual-jtag-mcp.md  user-manual-ppk2.md  user-manual-serial-mcp.md  user-manual-vision-mcp.md  user-manual.md
jtag-mcp/: server.py
jtag-mcp-rs/: Cargo.toml
jtag-mcp-rs/src/: main.rs
orchestrator/: fault_sim.py  inject_fault.py  watcher.py
ppk2-mcp-rs/: Cargo.toml
ppk2-mcp-rs/src/: main.rs
serial-mcp/: server.py
serial-mcp-rs/: Cargo.toml
serial-mcp-rs/src/: main.rs
vision-mcp/: server.py  tests.py
