[package]
name = "build-flash-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
glob = "0.3"
