[package]
name = "jtag-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "schemars", "transport-io"] }
probe-rs = "0.31.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml = "0.8"
