[package]
name = "ppk2-mcp-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ppk2-mcp-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
ppk2 = "0.1.3"
serialport = "4"
